src/test/ui/variance/variance-regions-direct.stderr
error[E0208]: [-, -, -]
  --> $DIR/variance-regions-direct.rs:9:1
   |
LL | / struct Test2<'a, 'b, 'c> {
LL | |     x: &'a isize,
LL | |     y: &'b [isize],
LL | |     c: &'c str
LL | | }
   | |_^

error[E0208]: [+, +, +]
  --> $DIR/variance-regions-direct.rs:18:1
   |
LL | / struct Test3<'a, 'b, 'c> {
LL | |     x: extern "Rust" fn(&'a isize),
LL | |     y: extern "Rust" fn(&'b [isize]),
LL | |     c: extern "Rust" fn(&'c str),
LL | | }
   | |_^

error[E0208]: [-, o]
  --> $DIR/variance-regions-direct.rs:27:1
   |
LL | / struct Test4<'a, 'b:'a> {
LL | |     x: &'a mut &'b isize,
LL | | }
   | |_^

error[E0208]: [+, o]
  --> $DIR/variance-regions-direct.rs:35:1
   |
LL | / struct Test5<'a, 'b:'a> {
LL | |     x: extern "Rust" fn(&'a mut &'b isize),
LL | | }
   | |_^

error[E0208]: [-, o]
  --> $DIR/variance-regions-direct.rs:45:1
   |
LL | / struct Test6<'a, 'b:'a> {
LL | |     x: &'a mut extern "Rust" fn(&'b isize),
LL | | }
   | |_^

error[E0208]: [*]
  --> $DIR/variance-regions-direct.rs:52:1
   |
LL | / struct Test7<'a> {
LL | |     x: isize
LL | | }
   | |_^

error[E0208]: [+, -, o]
  --> $DIR/variance-regions-direct.rs:59:1
   |
LL | / enum Test8<'a, 'b, 'c:'b> {
LL | |     Test8A(extern "Rust" fn(&'a isize)),
LL | |     Test8B(&'b [isize]),
LL | |     Test8C(&'b mut &'c str),
LL | | }
   | |_^

error: aborting due to 7 previous errors

